--- a/package.json
+++ b/package.json
@@ -2,14 +2,28 @@
   "name": "timestamp-microservice",
   "version": "1.0.0",
   "description": "A project made for APIs and Microservices Projects certification at freeCodeCamp",
-  "main": "index.js",
+  "main": "app/app.js",
   "scripts": {
+    "start": "node -r dotenv/config app/app.js",
+    "dev": "nodemon -r dotenv/config app/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "node",
+    "express",
+    "freeCodeCamp",
+    "certification",
+    "API",
+    "Microservice"
+  ],
   "author": "Gerald Andrei Tamasi",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
   }
 }
