--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
+  },
+  "engines": {
+    "node": "14.15.5"
   }
 }
